@@ -29,7 +29,7 @@ AM_GCONF_SOURCE_2
 AC_DEFINE_UNQUOTED(GNOME_ICONDIR, "${prefix}/share/pixmaps")
 
 dnl Add the languages which your application supports here.
-ALL_LINGUAS="am ar az be bg bn ca cs cy da de el es fa fi fr ga gl he hi hu id it ja ko li lt lv mk ml mn ms nl no pl pt pt_BR ro ru sk sl sq sr sr@Latn sv ta tr uk vi zh_CN zh_TW"
+ALL_LINGUAS="am ar az be bg bn ca cs cy da de el es fa fi fr ga gl he hi hu id it ja ko li lv mk ml mn ms nl no pl pt pt_BR ro ru sk sl sq sr sr@Latn sv ta tr uk vi zh_CN zh_TW"
 
 GETTEXT_PACKAGE=gnome-system-monitor
 AC_SUBST(GETTEXT_PACKAGE)
